style.css
/* ----- */
/* Imports */
/* ----- */
@import url('https://fonts.googleapis.com/css2?family=Eczar:wght@400..800&display=swap');


/* ----- */
/* Base */
/* ----- */

:root, [data-bs-theme=light] {
  --basefontsize: calc(1rem + 3vw);
  --baseborderthickness: calc(.5 * var(--basefontsize));
  --basefontcolour: #222;
  --green: #35A6AD;
  --red: #EF4748;
  --white: #F8F5ED;
  --grey: #ccc;
/*  --white: rgb(240, 240, 240);*/
  --black: rgb(43, 40, 40);
}

body {
  font-family: "Eczar", "Times New Roman", "Georgia", serif;
  color: var(--basefontcolour);
  background-repeat: round;
  background-attachment: fixed;
  background-color: var(--white);
  overflow-x: hidden;
}

html {
	/* scroll-snap-type: mandatory; */
	/* scroll-snap-points-y: repeat(100vh); */
	/* scroll-snap-type: y mandatory; */
}

p {
  font-optical-sizing: auto;
  font-size: var(--basefontsize);
  font-weight: 440;
  line-height: calc(1.375 * var(--basefontsize));
}

.container {
  margin: 0 auto;
  --margins: calc(2 * var(--basefontsize));
  margin-top: var(--margins);
  margin-bottom: var(--margins);
  display: flex;
  flex-direction: column;

}

/* ----- */
/* Sections */
/* ----- */

.container > * {
  max-width: calc(17.5 * var(--basefontsize));
  margin: 0 auto;
}

section {
  position: relative;
  text-align: left;
  flex-shrink: 0;
  flex-grow: 0;
  flex-basis: auto;
  padding: 1rem; 
  scroll-snap-align: start;
  width: -webkit-fill-available;
}
  section > p, 
  section > .section-content {
    text-align: left;
  }

  section > .section-content .text-contextnews {
    opacity: .6777;
  }


/* ----- */
/* Story Dialogs */
/* ----- */

.dialog-wrapper {
  /* cursor: move; */
  position: absolute;
  max-width: 450px;
  width: 100%;
  background: var(--white);
  box-shadow: 0px 0px 5px rgba(0,0,0,0.125);
  padding: 1rem;
  font-size: calc(.5rem + 1vw);
}
  .dialog-wrapper .expand-collapse {
    display: block;
    width: 40px;
    height: 40px;
    background-color: grey;
    font-family: monospace;
    color: var(--white);
    position: absolute;
    left: -42px;
    top: -2px;
    text-align: center;
    vertical-align: middle;
    font-size: 1.8rem;
    font-weight: bold;
    cursor: pointer !important;
  }
  .dialog-wrapper .year { font-size: 0.7rem; }
  .positive-story { border: var(--baseborderthickness) solid var(--green); }
  .negative-story { border: var(--baseborderthickness) solid var(--red); }
  .neutral-story  { border: var(--baseborderthickness) solid var(--grey); }
  .dialog-wrapper header {
    font-size: 23px;
    font-weight: 500;
    padding: 17px 30px;
    border-bottom: 1px solid #ccc;
    transform: scale(.15);
  }
  .dialog-wrapper .content { padding: 2rem; }

/* ----- */
/* Animations & Utilities */
/* ----- */

.disable-touch { touch-action: none !important; }

@keyframes zoom {
  from {
    transform: scale(.15);
  }
  to {
    transform: translate(-30%, -30%) scale(1);
  }
}

.zoomin {
  animation-name: zoom;
  animation-direction: normal;
  animation-duration: 0.8s;
  animation-timing-function: ease-in-out;
  transform: scale(1);
  transition: all .3 ease-in;
  z-index: 999;

}
.zoomout {
  animation-name: zoom;
  animation-direction: reverse;
  animation-duration: 0.8s;
  animation-timing-function: ease-in-out;
  transform: scale(.1);
  transition: all .3 ease-in;
  z-index: 10;
}
  .zoomout:hover {
    cursor: zoom-in !important;
  }

a {
  text-decoration: none;
  display: inline-block;
}
a.p, a.n, a.e, a.m {
  border-radius: calc(.1 * var(--basefontsize));
  cursor: pointer;
}
a.p, a.n, a.e {
  --padding-sides: calc(.2 * var(--basefontsize));
  --padding-top: calc(var(--padding-sides) * .5);
  padding: var(--padding-top) var(--padding-sides) 0;
  cursor: zoom-in;
}

a.p /* positive */
{
  background-color: var(--green);
}

a.n  /* negative */
{
  background-color: var(--red);
}

a.e /* general world news */
{
  background-color: var(--grey);
}
a.m /* "read more" */ {  }


/** utility classes **/
.invisible {
  visibility: hidden !important;
  display: none !important;
}

